--- a/src/index.css
+++ b/src/index.css
@@ -9,9 +9,34 @@
     @apply text-primary;
   }
 }
-body{
+
+/* Custom Selection */
+::selection {
+  background: #fca5a5;
+  color: rgb(0, 0, 0);
+}
+
+/* Custom ScrollBar */
+::-webkit-scrollbar {
+  width: 6px;
+  /* height: 80px; */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #ef4444;
+  border-radius: 50px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #b91c1c;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #fecaca;
+}
+
+body {
   cursor: url("https://res.cloudinary.com/dcwwptwzt/image/upload/v1746468180/Cursor_fl2xu1.png"), pointer;
   font-family: 'Poppins', sans-serif;
   font-weight: 100;
 }
-
