Custom Cursor removed! ---- Click Bug Fixed

--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,7 @@
 }
 
 body {
-  cursor: url("https://res.cloudinary.com/dcwwptwzt/image/upload/v1746468180/Cursor_fl2xu1.png"), pointer;
+  /* cursor: url("https://res.cloudinary.com/dcwwptwzt/image/upload/v1746468180/Cursor_fl2xu1.png"), pointer; */
   font-family: 'Poppins', sans-serif;
   font-weight: 100;
 }
