--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,6 @@
 
 body {
   cursor: url("https://res.cloudinary.com/dcwwptwzt/image/upload/v1746468180/Cursor_fl2xu1.png"), auto;
-  font-family: 'Geist', sans-serif;
+  font-family: 'Poppins',sans-serif;
   font-weight: 100;
 }
