Home.jsx URL specified.

--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,10 @@
   background-color: #fecaca;
 }
 
+html{
+  scroll-behavior: smooth;
+}
+
 body {
   cursor: url("https://res.cloudinary.com/dcwwptwzt/image/upload/v1746468180/Cursor_fl2xu1.png"), auto;
   font-family: 'Poppins',sans-serif;
